--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 }
 .details h2 {
     margin-bottom: 0;
+    margin-top:0;
 }
 .details p{
     margin-top: 7px;
@@ -51,6 +52,7 @@ body {
     width: 20%;
     margin-left: 4%;
     margin-top: -10%;
+    
 }
 
 #repo-list {
